--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/cmd/",
+      "program": "${workspaceFolder}/cmd/tctl",
       "cwd": "${workspaceFolder}",
       "args": [
         "config",
@@ -20,7 +20,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/cmd/",
+      "program": "${workspaceFolder}/cmd/tctl",
       "cwd": "${workspaceFolder}",
       "args": [
         "config",
@@ -34,7 +34,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/cmd/",
+      "program": "${workspaceFolder}/cmd/tctl",
       "cwd": "${workspaceFolder}",
       "args": [
         "config",
@@ -48,7 +48,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/cmd/",
+      "program": "${workspaceFolder}/cmd/tctl",
       "cwd": "${workspaceFolder}",
       "args": [
         "cluster",
@@ -60,7 +60,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/cmd/",
+      "program": "${workspaceFolder}/cmd/tctl",
       "cwd": "${workspaceFolder}",
       "args": [
         "namespace",
@@ -72,7 +72,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/cmd/",
+      "program": "${workspaceFolder}/cmd/tctl",
       "cwd": "${workspaceFolder}",
       "args": ["${input:args1}", "${input:args2}"],
     },
