Add tctl next deprecation message

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
       "program": "${workspaceFolder}/cmd/tctl",
       "cwd": "${workspaceFolder}",
       "args": [
-        "config",
-        "get",
-        "version",
+        "workflow",
+        "list",
+        "-h",
       ]
     },
     {
