Fix --namespace_id option for tctl admin workflow

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -68,6 +68,19 @@
       ]
     },
     {
+      "name": "temporalite:admin:workflow:show",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/cmd/tctl",
+      "cwd": "${workspaceFolder}",
+      "args": [
+        "admin",
+        "wf",
+        "show"
+      ]
+    },
+    {
       "name": "temporalite:debug",
       "type": "go",
       "request": "launch",
