--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3.0.0
         with:
-          go-version: 1.18
+          go-version-file: 'go.mod'
+          check-latest: true
 
       - name: Get build date
         id: date
