--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3.0.0
         with:
-          go-version: 1.18
+          go-version-file: 'go.mod'
+          check-latest: true
       - name: build
         run: make build
       - name: test
